Fix css purging to only target tailwindcss
Updates tailwindcss and postcss to newer versions. Tailwindcss handles purging with internal purgecss lib.

Closes #242

--- a/packages/ramp-core/src/styles/main.css
+++ b/packages/ramp-core/src/styles/main.css
@@ -1,8 +1,7 @@
-/* scope all of tailwind-generated styles under `ramp-app` */
 .ramp-app {
-    @tailwind base;
-    @tailwind components;
-    @tailwind utilities;
+    @import 'tailwindcss/base';
+    @import 'tailwindcss/components';
+    @import 'tailwindcss/utilities';
 }
 
 .ramp-app button:focus {
