--- a/packages/ramp-core/src/styles/main.css
+++ b/packages/ramp-core/src/styles/main.css
@@ -1,4 +1,9 @@
 .ramp-app {
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+    font-size: 16px;
+    line-height: 1.5;
+    word-wrap: break-word;
+
     @import 'tailwindcss/base';
     @import 'tailwindcss/components';
     @import 'tailwindcss/utilities';
@@ -6,4 +11,18 @@
 
 .ramp-app button:focus {
     outline: 2px solid black;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('font/Montserrat-Reg-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('font/Montserrat-Sbold-webfont.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
 }
