--- a/packages/ramp-core/src/styles/main.css
+++ b/packages/ramp-core/src/styles/main.css
@@ -13,6 +13,11 @@
     outline: 2px solid black;
 }
 
+/* Change ag-grid theme default font (Roboto) to match the rest of the page. */
+.ramp-app .ag-theme-material * {
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+}
+
 @font-face {
     font-family: 'Montserrat';
     src: url('font/Montserrat-Reg-webfont.woff2') format('woff2');
