change tooltips to use vue-tippy

--- a/packages/ramp-core/src/directives/focus-list/focus-list.scss
+++ b/packages/ramp-core/src/directives/focus-list/focus-list.scss
@@ -23,6 +23,10 @@ $focus-outline-width: 2px;
             [focus-item].focused.default-focus-style {
                 @include blue-outline;
             }
+
+            [focus-list] [focus-item].focused.default-focus-style {
+                @include grey-outline();
+            }
         }
     }
 }
