--- a/packages/ramp-core/src/styles/main.css
+++ b/packages/ramp-core/src/styles/main.css
@@ -1,5 +1,6 @@
 .ramp-app {
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI,
+        Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
@@ -15,7 +16,8 @@
 
 /* Change ag-grid theme default font (Roboto) to match the rest of the page. */
 .ramp-app .ag-theme-material * {
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI,
+        Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 /* styling for rectangle when Shift+Left-click+Drag zooming */
@@ -33,14 +35,19 @@
 }
 
 .ramp-app .esri-zoom-box__overlay-background {
-    fill: rgba(0,0,0,.1);
+    fill: rgba(0, 0, 0, 0.1);
 }
 
 .ramp-app .esri-zoom-box__outline {
     fill: transparent;
     stroke: #1e90ff;
-    stroke-dasharray: 1,1;
+    stroke-dasharray: 1, 1;
     stroke-width: 2px;
+}
+
+.tippy-tooltip.ramp-theme {
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI,
+        Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 @font-face {
