fix input, textarea, etc font sizes using rem

--- a/packages/ramp-core/src/styles/main.css
+++ b/packages/ramp-core/src/styles/main.css
@@ -4,6 +4,27 @@
     word-wrap: break-word;
 
     @import 'tailwindcss/base';
+
+    @layer base {
+        [type='text'],
+        [type='email'],
+        [type='url'],
+        [type='password'],
+        [type='number'],
+        [type='date'],
+        [type='datetime-local'],
+        [type='month'],
+        [type='search'],
+        [type='tel'],
+        [type='time'],
+        [type='week'],
+        [multiple],
+        textarea,
+        select {
+            font-size: 16px;
+        }
+    }
+
     @import 'tailwindcss/components';
     @import 'tailwindcss/utilities';
 
