--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -116,3 +116,51 @@
     border-right: 2px solid #3f51b5;
     border-radius: 50%;
 }
+
+/* I got this loading bar code from http://dev.gojko.net/web/2015/09/19/material-design-progress-pure-css.html */
+/* Feel free to replace it with our own at some point */
+.progress-line,
+.progress-line:before {
+    height: 3px;
+    width: 100%;
+    margin: 0;
+}
+.progress-line {
+    background-color: #b3d4fc;
+    display: -webkit-flex;
+    display: flex;
+}
+.progress-line:before {
+    background-color: #3f51b5;
+    content: '';
+    -webkit-animation: running-progress 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+    animation: running-progress 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+}
+@-webkit-keyframes running-progress {
+    0% {
+        margin-left: 0px;
+        margin-right: 100%;
+    }
+    50% {
+        margin-left: 25%;
+        margin-right: 0%;
+    }
+    100% {
+        margin-left: 100%;
+        margin-right: 0;
+    }
+}
+@keyframes running-progress {
+    0% {
+        margin-left: 0px;
+        margin-right: 100%;
+    }
+    50% {
+        margin-left: 25%;
+        margin-right: 0%;
+    }
+    100% {
+        margin-left: 100%;
+        margin-right: 0;
+    }
+}
