Markdown and help formatting fix

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,12 @@
     @tailwind utilities;
     @tailwind variants;
 
+    @layer base {
+        .ramp-markdown * {
+            all: revert;
+        }
+    }
+
     @layer utilities {
         .display-none {
             display: none;
