--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -152,6 +152,10 @@
     display: inline;
 }
 
+.tippy-box[data-theme~='ramp4'] a {
+    text-decoration: underline;
+}
+
 .spinner {
     border: 2px solid rgba(0, 0, 0, 0.158);
     border-top: 2px solid #3f51b5;
