--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,12 +24,19 @@
         [multiple],
         textarea,
         select {
-            @apply text-base pt-8 pr-12 pb-8 pl-12 font-normal;
+            font-size: 16px;
+            line-height: 24px;
+            padding-top: 8px;
+            padding-right: 12px;
+            padding-bottom: 8px;
+            padding-left: 12px;
+            font-weight: 400;
         }
 
         [type='checkbox'],
         [type='radio'] {
-            @apply h-16 w-16;
+            height: 16px;
+            width: 16px;
         }
     }
 
